FireAlarmApplication.Web/mtg_debug_20260127_164553.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:45:53
NetCDF: C:\Users\kubil\AppData\Local\Temp\37866df7-73d0-473d-90ec-4ffb0256ab36.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
